-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 26
-
Component/s: hotspot
-
b11
-
arm
-
linux
Cross build arm32 and run with qemu:
sudo chroot /sysroot/armhf /tmp/build-armhf/images/jdk/bin/java --version
Here shows the error log:
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/tmp/jdk-src/src/hotspot/share/code/codeBlob.cpp:453), pid=119346, tid=119348
# assert(entry_offset[i] > 0 && entry_offset[i] < cb->insts()->size()) failed: invalid entry offset 0xbdfd1480
#
# JRE version: (26.0) (fastdebug build )
# Java VM: OpenJDK Server VM (fastdebug 26-internal-git-022e29a7753, mixed mode, compressed class ptrs, g1 gc, linux-arm)
# Problematic frame:
# V [libjvm.so+0x4843a0] AdapterBlob::AdapterBlob(int, CodeBuffer*, int*)+0x9f
#
# Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport -p%p -s%s -c%c -d%d -P%P -u%u -g%g -- %E" (or dumping to //core.119346)
#
# An error report file with more information is saved as:
# //hs_err_pid119346.log
#
#
qemu: uncaught target signal 6 (Aborted) - core dumped
environment: line 1: 119345 Aborted
sudo chroot /sysroot/armhf /tmp/build-armhf/images/jdk/bin/java --version
Here shows the error log:
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/tmp/jdk-src/src/hotspot/share/code/codeBlob.cpp:453), pid=119346, tid=119348
# assert(entry_offset[i] > 0 && entry_offset[i] < cb->insts()->size()) failed: invalid entry offset 0xbdfd1480
#
# JRE version: (26.0) (fastdebug build )
# Java VM: OpenJDK Server VM (fastdebug 26-internal-git-022e29a7753, mixed mode, compressed class ptrs, g1 gc, linux-arm)
# Problematic frame:
# V [libjvm.so+0x4843a0] AdapterBlob::AdapterBlob(int, CodeBuffer*, int*)+0x9f
#
# Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport -p%p -s%s -c%c -d%d -P%P -u%u -g%g -- %E" (or dumping to //core.119346)
#
# An error report file with more information is saved as:
# //hs_err_pid119346.log
#
#
qemu: uncaught target signal 6 (Aborted) - core dumped
environment: line 1: 119345 Aborted
- caused by
-
JDK-8364269 Simplify code cache API by storing adapter entry offsets in blob
-
- Resolved
-
- duplicates
-
JDK-8365263 zero build fails assert(entry_offset[i] > 0 && entry_offset[i] < cb->insts()->size()) failed: invalid entry offset 0x0
-
- Closed
-
- relates to
-
JDK-8365263 zero build fails assert(entry_offset[i] > 0 && entry_offset[i] < cb->insts()->size()) failed: invalid entry offset 0x0
-
- Closed
-
- links to
-
Commit(master)
openjdk/jdk/9c266ae8
-
Review(master)
openjdk/jdk/26746