8365229: ARM32: c2i_no_clinit_check_entry assert failed after JDK-8364269

Reviewed-by: kvn, adinn, bulasevich, phh